🩹 fix z-index canvas / menu

--- a/assets/style/components/navigation.styl
+++ b/assets/style/components/navigation.styl
@@ -1,6 +1,7 @@
 .navigation
   display flex
   padding 30px 60px
+  z-index 100
   &__logo
     margin-right: auto
     a
